fix(vue, angular): fixed scrollbar on change password modal

--- a/packages/vue/src/variables.scss
+++ b/packages/vue/src/variables.scss
@@ -6,7 +6,7 @@
   }
 
   .dx-theme-material {
-    --change-password-popup-height: 260px;
+    --change-password-popup-height: auto;
   }
 }
 
